--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       </svg>
       <span style="color: white; padding-left: 10px;">Chongqing House</span>
     </div>
-  </div>>
+  </div>
 
   
 </body>
